fix: handle multiple consequences in ODRL duty